--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
       {
         "origin": "https://n"
       }
-    ]
+    ],
+    "expo-sqlite"
   ],
   "name": "NguyenTuanAnh_22664561_De2",
   "slug": "NguyenTuanAnh_22664561_De2"
